--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    /* .app-container {
+      @apply p-10 m-4
+    } */
+}
+
+@layer components {
+  .login-label {
+      @apply p-2
+  }
+
+  .login-input {
+      @apply p-2 border rounded-md w-80
+  }
+
+  .login-btn-container {
+      @apply p-4 mx-2 my-2
+  }
+  
+  .form-btn {
+      @apply border rounded-md px-4 py-2 hover:bg-slate-400 hover:text-white
+  }
+
+  .navbar {
+      @apply flex flex-row justify-end
+  }
+  .nav-item {
+      @apply px-4 py-2 mx-2 my-1
+  }
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
