--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    @apply tracking-wider
+}
+
+@font-face {
+    font-family: "Noto Sans Thai";
+    src: url("./assets/fonts/NotoSansThai-Regular.ttf");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Noto Sans Thai";
+    src: url("./assets/fonts/NotoSansThai-SemiBold.ttf");
+    font-weight: 600;
+    font-style: normal;
+}
+
 @layer base {
-    /* .app-container {
-      @apply p-10 m-4
-    } */
-    * {
-        @apply tracking-wider
+    .font-NotoSansThai {
+        font-family: 'Noto Sans Thai', sans-serif; /* Apply the custom font */
     }
 }
 
@@ -24,47 +39,18 @@
       @apply p-4 mx-2 my-2
   }
   
-
-
-  .navbar {
-      @apply flex flex-row justify-end
+  ul.navbar {
+      @apply flex flex-row justify-end border-b-2 border-b-slate-200
   }
   
   .nav-item {
-      @apply px-6 py-3 relative hover:bg-slate-400 hover:text-white
+      @apply px-8 py-4 relative text-slate-500 
   }
-  .nav-item:hover .dropdown-menu {
-    max-height: fit-content; /* Adjust this value based on your content's height */
-    opacity: 1;
-    visibility: visible; 
-  }
-  .dropdown-menu {
-    @apply list-none absolute min-w-3  bg-white z-[1000] text-black
-  }
-  .dropdown-menu {
-    @apply flex flex-col;/* Show the dropdown menu on hover */
 
-    }
-    .dropdown-menu {
-        /* padding-top: 12px; */
-        max-height: 0;
-        opacity: 0;
-        overflow: hidden;
-        transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s;
-        visibility: hidden;
-    }
-    
-    .dropdown-menu.open {
-        max-height: fit-content; /* Adjust this value based on your content's height */
-        opacity: 1;
-        visibility: visible;
-    }
-    .dropdown-menu li {
-        @apply px-2 py-4
-    }
-    .dropdown-menu li:hover {
-        @apply bg-slate-300 text-white /* Add hover effect to dropdown menu items */
-    }
+  .nav-item:hover,
+  .nav-item.active {
+    @apply text-slate-800
+  }
 
   .form-item {
       @apply flex flex-col p-2 m-1 
@@ -76,4 +62,10 @@
 
 .App {
   text-align: center;
+}
+
+.scrollable-container {
+    height: 400px; /* Adjust height as needed */
+    overflow-y: auto;
+    padding-right: 16px; /* To avoid scrollbar overlap */
 }
