--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
     .font-NotoSansThai {
         font-family: 'Noto Sans Thai', sans-serif; /* Apply the custom font */
     }
+
 }
 
 @layer components {
@@ -38,10 +39,10 @@
   .login-btn-container {
       @apply p-4 mx-2 my-2
   }
-  
+/*   
   ul.navbar {
       @apply flex flex-row justify-end border-b-2 border-b-slate-200
-  }
+  } */
   
   .nav-item {
       @apply px-8 py-4 relative text-slate-500 
