--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@
 }
 
 @layer base {
+    body {
+        @apply bg-gray-100
+    }
     .font-NotoSansThai {
         font-family: 'Noto Sans Thai', sans-serif; /* Apply the custom font */
     }
